Changed CS labels in xsimulator to LS labels

--- a/companion/src/xsimulatordialog.ui
+++ b/companion/src/xsimulatordialog.ui
@@ -2311,6 +2311,7 @@ border-radius: 4px;
           </widget>
          </item>
          <item row="4" column="4">
+
           <widget class="QSlider" name="chnout_13">
            <property name="enabled">
             <bool>false</bool>
@@ -2893,7 +2894,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_20">
                 <property name="text">
-                 <string>CSK</string>
+                 <string>LSK</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -2924,7 +2925,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_12">
                 <property name="text">
-                 <string>CSC</string>
+                 <string>LSC</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -2955,7 +2956,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_13">
                 <property name="text">
-                 <string>CSD</string>
+                 <string>LSD</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -2986,7 +2987,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_7">
                 <property name="text">
-                 <string>CS7</string>
+                 <string>LS7</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3017,7 +3018,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_21">
                 <property name="text">
-                 <string>CSL</string>
+                 <string>LSL</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3048,7 +3049,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_11">
                 <property name="text">
-                 <string>CSB</string>
+                 <string>LSB</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3079,7 +3080,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_1">
                 <property name="text">
-                 <string>CS1</string>
+                 <string>LS1</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3110,7 +3111,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_17">
                 <property name="text">
-                 <string>CSH</string>
+                 <string>LSH</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3141,7 +3142,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_16">
                 <property name="text">
-                 <string>CSG</string>
+                 <string>LSG</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3172,7 +3173,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_14">
                 <property name="text">
-                 <string>CSE</string>
+                 <string>LSE</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3203,7 +3204,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_15">
                 <property name="text">
-                 <string>CSF</string>
+                 <string>LSF</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3234,7 +3235,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_8">
                 <property name="text">
-                 <string>CS8</string>
+                 <string>LS8</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3265,7 +3266,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_9">
                 <property name="text">
-                 <string>CS9</string>
+                 <string>LS9</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3296,7 +3297,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_10">
                 <property name="text">
-                 <string>CSA</string>
+                 <string>LSA</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3327,7 +3328,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_22">
                 <property name="text">
-                 <string>CSM</string>
+                 <string>LSM</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3358,7 +3359,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_19">
                 <property name="text">
-                 <string>CSJ</string>
+                 <string>LSJ</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3389,7 +3390,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_18">
                 <property name="text">
-                 <string>CSI</string>
+                 <string>LSI</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3420,7 +3421,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_4">
                 <property name="text">
-                 <string>CS4</string>
+                 <string>LS4</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3451,7 +3452,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_5">
                 <property name="text">
-                 <string>CS5</string>
+                 <string>LS5</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3482,7 +3483,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_2">
                 <property name="text">
-                 <string>CS2</string>
+                 <string>LS2</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3513,7 +3514,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_3">
                 <property name="text">
-                 <string>CS3</string>
+                 <string>LS3</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3544,7 +3545,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_6">
                 <property name="text">
-                 <string>CS6</string>
+                 <string>LS6</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3575,7 +3576,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_23">
                 <property name="text">
-                 <string>CSN</string>
+                 <string>LSN</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3606,7 +3607,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_24">
                 <property name="text">
-                 <string>CSO</string>
+                 <string>LSO</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3637,7 +3638,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_25">
                 <property name="text">
-                 <string>CSP</string>
+                 <string>LSP</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3668,7 +3669,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_26">
                 <property name="text">
-                 <string>CSQ</string>
+                 <string>LSQ</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3699,7 +3700,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_27">
                 <property name="text">
-                 <string>CSR</string>
+                 <string>LSR</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3730,7 +3731,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_28">
                 <property name="text">
-                 <string>CSS</string>
+                 <string>LSS</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3761,7 +3762,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_29">
                 <property name="text">
-                 <string>CST</string>
+                 <string>LST</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3792,7 +3793,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_30">
                 <property name="text">
-                 <string>CSU</string>
+                 <string>LSU</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3823,7 +3824,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_31">
                 <property name="text">
-                 <string>CSV</string>
+                 <string>LSV</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3854,7 +3855,7 @@ border-radius: 4px;
               <item>
                <widget class="QLabel" name="labelCSW_32">
                 <property name="text">
-                 <string>CSW</string>
+                 <string>LSW</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
