Preference dialog split into two dialogs. Both the two new dialogs and the old one are active and working at the same time. The old one will be removed when everything is in place. New preference icons are added for classical theme. Placeholder icons added for all monochrome themes. The only thing not moved is the splash screen functionality. It does not really fit in either dialog and there are allready another special dialog for customizing splash screens. Perhaps make a combined dialog for all splash screen work? Will think about it tomorrow.

--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -326,6 +326,8 @@
     <file>themes/monochrome/16/compare.png</file>
     <file>themes/monochrome/16/saveas.png</file>
     <file>themes/monochrome/16/preferences.png</file>
+    <file>themes/monochrome/16/apppreferences.png</file>
+    <file>themes/monochrome/16/fwpreferences.png</file>
     <file>themes/monochrome/16/movedown.png</file>
     <file>themes/monochrome/16/currentmodel.png</file>
     <file>themes/monochrome/16/read_flash.png</file>
@@ -368,6 +370,8 @@
     <file>themes/monochrome/24/compare.png</file>
     <file>themes/monochrome/24/saveas.png</file>
     <file>themes/monochrome/24/preferences.png</file>
+    <file>themes/monochrome/24/apppreferences.png</file>
+    <file>themes/monochrome/24/fwpreferences.png</file>
     <file>themes/monochrome/24/movedown.png</file>
     <file>themes/monochrome/24/currentmodel.png</file>
     <file>themes/monochrome/24/read_flash.png</file>
@@ -410,6 +414,8 @@
     <file>themes/monochrome/32/compare.png</file>
     <file>themes/monochrome/32/saveas.png</file>
     <file>themes/monochrome/32/preferences.png</file>
+    <file>themes/monochrome/32/apppreferences.png</file>
+    <file>themes/monochrome/32/fwpreferences.png</file>
     <file>themes/monochrome/32/movedown.png</file>
     <file>themes/monochrome/32/currentmodel.png</file>
     <file>themes/monochrome/32/read_flash.png</file>
@@ -452,6 +458,8 @@
     <file>themes/monochrome/48/compare.png</file>
     <file>themes/monochrome/48/saveas.png</file>
     <file>themes/monochrome/48/preferences.png</file>
+    <file>themes/monochrome/48/apppreferences.png</file>
+    <file>themes/monochrome/48/fwpreferences.png</file>
     <file>themes/monochrome/48/movedown.png</file>
     <file>themes/monochrome/48/currentmodel.png</file>
     <file>themes/monochrome/48/read_flash.png</file>
@@ -494,6 +502,8 @@
     <file>themes/classic/16/compare.png</file>
     <file>themes/classic/16/saveas.png</file>
     <file>themes/classic/16/preferences.png</file>
+    <file>themes/classic/16/apppreferences.png</file>
+    <file>themes/classic/16/fwpreferences.png</file>
     <file>themes/classic/16/movedown.png</file>
     <file>themes/classic/16/currentmodel.png</file>
     <file>themes/classic/16/read_flash.png</file>
@@ -536,6 +546,8 @@
     <file>themes/classic/24/compare.png</file>
     <file>themes/classic/24/saveas.png</file>
     <file>themes/classic/24/preferences.png</file>
+    <file>themes/classic/24/apppreferences.png</file>
+    <file>themes/classic/24/fwpreferences.png</file>
     <file>themes/classic/24/movedown.png</file>
     <file>themes/classic/24/currentmodel.png</file>
     <file>themes/classic/24/read_flash.png</file>
@@ -578,6 +590,8 @@
     <file>themes/classic/32/compare.png</file>
     <file>themes/classic/32/saveas.png</file>
     <file>themes/classic/32/preferences.png</file>
+    <file>themes/classic/32/apppreferences.png</file>
+    <file>themes/classic/32/fwpreferences.png</file>
     <file>themes/classic/32/movedown.png</file>
     <file>themes/classic/32/currentmodel.png</file>
     <file>themes/classic/32/read_flash.png</file>
@@ -620,6 +634,8 @@
     <file>themes/classic/48/compare.png</file>
     <file>themes/classic/48/saveas.png</file>
     <file>themes/classic/48/preferences.png</file>
+    <file>themes/classic/48/apppreferences.png</file>
+    <file>themes/classic/48/fwpreferences.png</file>
     <file>themes/classic/48/movedown.png</file>
     <file>themes/classic/48/currentmodel.png</file>
     <file>themes/classic/48/read_flash.png</file>
@@ -662,6 +678,8 @@
     <file>themes/monoblue/16/compare.png</file>
     <file>themes/monoblue/16/saveas.png</file>
     <file>themes/monoblue/16/preferences.png</file>
+    <file>themes/monoblue/16/apppreferences.png</file>
+    <file>themes/monoblue/16/fwpreferences.png</file>
     <file>themes/monoblue/16/movedown.png</file>
     <file>themes/monoblue/16/currentmodel.png</file>
     <file>themes/monoblue/16/read_flash.png</file>
@@ -704,6 +722,8 @@
     <file>themes/monoblue/24/compare.png</file>
     <file>themes/monoblue/24/saveas.png</file>
     <file>themes/monoblue/24/preferences.png</file>
+    <file>themes/monoblue/24/apppreferences.png</file>
+    <file>themes/monoblue/24/fwpreferences.png</file>
     <file>themes/monoblue/24/movedown.png</file>
     <file>themes/monoblue/24/currentmodel.png</file>
     <file>themes/monoblue/24/read_flash.png</file>
@@ -746,6 +766,8 @@
     <file>themes/monoblue/32/compare.png</file>
     <file>themes/monoblue/32/saveas.png</file>
     <file>themes/monoblue/32/preferences.png</file>
+    <file>themes/monoblue/32/apppreferences.png</file>
+    <file>themes/monoblue/32/fwpreferences.png</file>
     <file>themes/monoblue/32/movedown.png</file>
     <file>themes/monoblue/32/currentmodel.png</file>
     <file>themes/monoblue/32/read_flash.png</file>
@@ -788,6 +810,8 @@
     <file>themes/monoblue/48/compare.png</file>
     <file>themes/monoblue/48/saveas.png</file>
     <file>themes/monoblue/48/preferences.png</file>
+    <file>themes/monoblue/48/apppreferences.png</file>
+    <file>themes/monoblue/48/fwpreferences.png</file>
     <file>themes/monoblue/48/movedown.png</file>
     <file>themes/monoblue/48/currentmodel.png</file>
     <file>themes/monoblue/48/read_flash.png</file>
@@ -830,6 +854,8 @@
     <file>themes/monowhite/16/compare.png</file>
     <file>themes/monowhite/16/saveas.png</file>
     <file>themes/monowhite/16/preferences.png</file>
+    <file>themes/monowhite/16/apppreferences.png</file>
+    <file>themes/monowhite/16/fwpreferences.png</file>
     <file>themes/monowhite/16/movedown.png</file>
     <file>themes/monowhite/16/currentmodel.png</file>
     <file>themes/monowhite/16/read_flash.png</file>
@@ -872,6 +898,8 @@
     <file>themes/monowhite/24/compare.png</file>
     <file>themes/monowhite/24/saveas.png</file>
     <file>themes/monowhite/24/preferences.png</file>
+    <file>themes/monowhite/24/apppreferences.png</file>
+    <file>themes/monowhite/24/fwpreferences.png</file>
     <file>themes/monowhite/24/movedown.png</file>
     <file>themes/monowhite/24/currentmodel.png</file>
     <file>themes/monowhite/24/read_flash.png</file>
@@ -914,6 +942,8 @@
     <file>themes/monowhite/32/compare.png</file>
     <file>themes/monowhite/32/saveas.png</file>
     <file>themes/monowhite/32/preferences.png</file>
+    <file>themes/monowhite/32/apppreferences.png</file>
+    <file>themes/monowhite/32/fwpreferences.png</file>
     <file>themes/monowhite/32/movedown.png</file>
     <file>themes/monowhite/32/currentmodel.png</file>
     <file>themes/monowhite/32/read_flash.png</file>
@@ -956,6 +986,8 @@
     <file>themes/monowhite/48/compare.png</file>
     <file>themes/monowhite/48/saveas.png</file>
     <file>themes/monowhite/48/preferences.png</file>
+    <file>themes/monowhite/48/apppreferences.png</file>
+    <file>themes/monowhite/48/fwpreferences.png</file>
     <file>themes/monowhite/48/movedown.png</file>
     <file>themes/monowhite/48/currentmodel.png</file>
     <file>themes/monowhite/48/read_flash.png</file>
