--- a/companion/src/apppreferencesdialog.ui
+++ b/companion/src/apppreferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>685</width>
-    <height>313</height>
+    <height>473</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -26,6 +26,80 @@
    <string>Application Preferences</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="13" column="0">
+    <widget class="QLabel" name="label_19">
+     <property name="text">
+      <string>Simulator capture folder</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="8">
+    <widget class="Line" name="line_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="15" column="1" colspan="7">
+    <widget class="QCheckBox" name="simuSW">
+     <property name="text">
+      <string>Remember simulator switch values</string>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="1" colspan="8">
+    <widget class="Line" name="line_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="8">
+    <widget class="QPushButton" name="snapshotPathButton">
+     <property name="text">
+      <string>Open Folder</string>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="1" colspan="8">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="1">
+    <widget class="QComboBox" name="backLightColor">
+     <item>
+      <property name="text">
+       <string>Blue</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Green</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Red</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Orange</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Yellow</string>
+      </property>
+     </item>
+    </widget>
+   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_5">
      <property name="sizePolicy">
@@ -35,7 +109,149 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Recent Files</string>
+      <string>Files to keep</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="7">
+    <widget class="QLineEdit" name="ge_lineedit">
+     <property name="minimumSize">
+      <size>
+       <width>250</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Simulator BackLight</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="18" column="1" colspan="8">
+    <widget class="Line" name="line_5">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="0">
+    <widget class="QLabel" name="label_17">
+     <property name="text">
+      <string>Automatic Backup Folder</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="1" colspan="7">
+    <widget class="QLineEdit" name="backupPath">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="8">
+    <widget class="QPushButton" name="backupPathButton">
+     <property name="text">
+      <string>Open Folder</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="1">
+    <widget class="QComboBox" name="joystickCB">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item row="19" column="7" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="1" colspan="7">
+    <widget class="QCheckBox" name="snapshotClipboardCKB">
+     <property name="text">
+      <string>Only capture to clipboard</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1" colspan="8">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="1" colspan="7">
+    <widget class="QLineEdit" name="snapshotPath">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="0">
+    <widget class="QLabel" name="label_11">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Joystick</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="8">
+    <widget class="QPushButton" name="ge_pathButton">
+     <property name="text">
+      <string>Find Executable</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="ge_label">
+     <property name="text">
+      <string>Google Earth Executable</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="8">
+    <widget class="QPushButton" name="joystickcalButton">
+     <property name="text">
+      <string>Calibrate</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="4" colspan="4">
+    <widget class="QCheckBox" name="joystickChkB">
+     <property name="text">
+      <string>Enable</string>
      </property>
     </widget>
    </item>
@@ -55,7 +271,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="3">
+   <item row="5" column="1" colspan="7">
     <widget class="QCheckBox" name="showSplash">
      <property name="text">
       <string>Show splash screen when Companion starts</string>
@@ -65,76 +281,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="1" colspan="3">
-    <widget class="QCheckBox" name="startupCheck_companion9x">
-     <property name="text">
-      <string>Automatic check for Companion updates</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="10" column="1" colspan="3">
-    <widget class="QCheckBox" name="backupEnable">
-     <property name="text">
-      <string>Enable automatic backup before writing firmware</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="0">
-    <widget class="QLabel" name="label_17">
-     <property name="text">
-      <string>Automatic Backup Folder</string>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="1" colspan="4">
-    <widget class="Line" name="line_3">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1" colspan="3">
-    <widget class="QLineEdit" name="ge_lineedit">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="4">
-    <widget class="QPushButton" name="ge_pathButton">
-     <property name="text">
-      <string>Find Executable</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="3" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="1" colspan="4">
-    <widget class="Line" name="line_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1" colspan="3">
+   <item row="6" column="1" colspan="7">
     <widget class="QCheckBox" name="startupCheck_fw">
      <property name="text">
       <string>Automatic check for OpenTX firmware updates</string>
@@ -144,7 +291,17 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="1" colspan="3">
+   <item row="7" column="1" colspan="7">
+    <widget class="QCheckBox" name="startupCheck_companion9x">
+     <property name="text">
+      <string>Automatic check for Companion updates</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1" colspan="7">
     <widget class="QCheckBox" name="wizardEnable_ChkB">
      <property name="text">
       <string>Offer to use wizard for new models</string>
@@ -154,62 +311,66 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="ge_label">
+   <item row="11" column="1" colspan="7">
+    <widget class="QCheckBox" name="backupEnable">
      <property name="text">
-      <string>Google Earth Executable</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" colspan="4">
-    <widget class="Line" name="line_4">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>(Number of recent Models&amp;Settings files to remember)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="4">
-    <widget class="QPushButton" name="backupPathButton">
-     <property name="text">
-      <string>Open Folder</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="1" colspan="3">
-    <widget class="QLineEdit" name="backupPath">
-     <property name="readOnly">
-      <bool>true</bool>
+      <string>Enable automatic backup before writing firmware</string>
      </property>
     </widget>
    </item>
   </layout>
-  <zorder>historySize</zorder>
   <zorder>startupCheck_companion9x</zorder>
   <zorder>backupEnable</zorder>
-  <zorder>label_17</zorder>
-  <zorder>ge_lineedit</zorder>
   <zorder>line</zorder>
-  <zorder>buttonBox</zorder>
   <zorder>backupPath</zorder>
   <zorder>line_2</zorder>
   <zorder>startupCheck_fw</zorder>
   <zorder>wizardEnable_ChkB</zorder>
   <zorder>ge_label</zorder>
-  <zorder>label</zorder>
   <zorder>label_5</zorder>
   <zorder>showSplash</zorder>
   <zorder>line_3</zorder>
   <zorder>ge_pathButton</zorder>
   <zorder>line_4</zorder>
   <zorder>backupPathButton</zorder>
+  <zorder>label_3</zorder>
+  <zorder>backLightColor</zorder>
+  <zorder>snapshotPath</zorder>
+  <zorder>snapshotPathButton</zorder>
+  <zorder>snapshotClipboardCKB</zorder>
+  <zorder>label_11</zorder>
+  <zorder>joystickCB</zorder>
+  <zorder>joystickcalButton</zorder>
+  <zorder>ge_lineedit</zorder>
+  <zorder>simuSW</zorder>
+  <zorder>buttonBox</zorder>
+  <zorder>line_5</zorder>
+  <zorder>joystickChkB</zorder>
+  <zorder>label_17</zorder>
+  <zorder>label_19</zorder>
+  <zorder>historySize</zorder>
  </widget>
+ <tabstops>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>ge_lineedit</tabstop>
+  <tabstop>ge_pathButton</tabstop>
+  <tabstop>historySize</tabstop>
+  <tabstop>showSplash</tabstop>
+  <tabstop>startupCheck_fw</tabstop>
+  <tabstop>startupCheck_companion9x</tabstop>
+  <tabstop>wizardEnable_ChkB</tabstop>
+  <tabstop>backupPath</tabstop>
+  <tabstop>backupPathButton</tabstop>
+  <tabstop>backupEnable</tabstop>
+  <tabstop>snapshotPath</tabstop>
+  <tabstop>snapshotPathButton</tabstop>
+  <tabstop>snapshotClipboardCKB</tabstop>
+  <tabstop>simuSW</tabstop>
+  <tabstop>backLightColor</tabstop>
+  <tabstop>joystickCB</tabstop>
+  <tabstop>joystickChkB</tabstop>
+  <tabstop>joystickcalButton</tabstop>
+ </tabstops>
  <resources>
   <include location="companion.qrc"/>
  </resources>
